Add change camera button

--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,7 @@
       <div id="local-stream-container" class="col p-0">
         <div class="col p-0 fixed-fullscreen" id="deepar-screen"></div>
         <button id="change-filter-button">Change filter</button>
+        <button id="switch-camera-button">Switch camera</button>
       </div>
     </div>
   </div>
